# ProofX

./: .coverage  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  ProofX.lean  README.md  coverage.xml  docker-compose.yml  germinal.db-shm  germinal.db-wal  lake-manifest.json  lakefile.lean  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  lean.yml  pylint.yml
ProofX/: Audit.lean  Certificates.lean  Status.lean
api/: main.py  models.py  routes.py  tasks.py
codebase/: cli.py
codebase/CollatzX/: RESEARCH_LOG.md
codebase/CollatzX/Analytics/: Analytics.py
codebase/CollatzX/RareEvent/results/: results.csv
codebase/CrossEngineAnalysis/: cross_engine.py
codebase/FalsificationEngine/: FalsificationEngine.py  RiemannFalsifier.py  calibration.py
codebase/GoldbachX/: RESEARCH_LOG.md
codebase/GoldbachX/AlgebraicExtensions/: AlgebraicExtensions.py
codebase/GoldbachX/PartitionEnumerator/: PartitionEnumerator.py
codebase/GoldbachX/SieveEngine/: SieveEngine.py
codebase/ReimannX/ZeroProperties/: ZeroProperties.py
docs/: AGENTS.md  CHANGELOG.md  ROADMAP.md  architecture.md  content-strategy.md  counterexample-search.md  deployment.md  lean4.md  mvp.md  research-standards.md
docs/engines/: collatz.md  falsification.md  goldbach.md
docs/markdown/codebase/CollatzX/RareEvent/results/: report.md
docs/markdown/docs/: architecture.md  content-strategy.md  deployment.md
docs/markdown/src/content/experiments/: goldbachx.md  riemannx.md
docs/superpowers/specs/: 2026-07-19-lean-certificate-exporter-design.md
frontend/.next/server/pages/: _app.js  _error.js  index.js
frontend/.next/static/chunks/: webpack.js
frontend/.next/static/chunks/fallback/: webpack.js
frontend/components/: ExperimentTable.tsx  Pipeline.tsx  Sidebar.tsx  StatsBar.tsx
frontend/pages/: index.tsx
frontend/pages/experiments/: [id].tsx
public/: 403.html  404.html  405.html  collatzx.html  contact.html  contribute.html  error-pages.css  findings.html  goldbachx.html  index.html  ledger-viewer.html  privacy.html  research.html  results.html  riemannx.html  roadmap.html  sitemap.xml  styles.css
public/erros/: 404.html
public/erros/engines/: collatzx.html  goldbachx.html  riemannx.html
scripts/: audit_lean_source.py  build.ps1  build.sh  build_site.py  cleanup.ps1  cleanup.sh  generate-results.ps1  generate-results.sh  validate-links.sh
src/: 404.html  501.html  auth-error.html  collatzx.html  complexity.py  conjecture_generator.py  contact.html  contribute.html  counterexample.py  formalizer.py  germinal.html  goldbachx.html  index.html  lean_sandbox.py  ledger-viewer.html  mathlib_rag.py  nav.js  privacy.html  research.html  results.html  results.json  riemannx.html  roadmap.html  robots.txt  sitemap.xml  snapshot.py  styles.css  verified-runs.js  verified-runs.json
src/components/: _footer.html  _head.html  _nav.html  footer.html  nav.html  page-shell.html
src/content/: findings.md  overview.md  research.md
src/content/experiments/: collatzx.md
src/germinal/: index.html
src/pages/collatzx/: content.html  meta.json  script.js  script.ts
src/pages/contact/: content.html  meta.json
src/pages/contribute/: content.html  meta.json
src/pages/germinal/: content.html  meta.json
src/pages/goldbachx/: content.html  meta.json  script.js  script.ts
src/pages/index/: content.html  meta.json
src/pages/ledger-viewer/: content.html  meta.json  script.js  script.ts
src/pages/privacy/: content.html  meta.json
src/pages/research/: content.html  meta.json
src/pages/results/: content.html  meta.json  script.js
src/pages/riemannx/: content.html  meta.json  script.js  script.ts
src/pages/roadmap/: content.html  meta.json
src/scripts/: experiments.js  main.js  nav.js  verified-runs.js
src/static/: 400.html  401.html  500.html  monitoring.js  sitemap.xml  styles.css
src/styles/components/: footer.css  layout.css  nav.css
src/styles/pages/: experiments.css  home.css  research.css
tests/: conftest.py  test_audit_lean_source.py  test_failure_registry.py  test_lean_export.py  test_novelty.py  test_symbolic_counterexample.py  test_verified_runs.py
tests/test_collatzx/: test_analytics.py
tests/test_cross_engine/: test_cross_engine.py
tests/test_falsification_engine/: test_calibration.py  test_engine.py  test_riemann_falsifier.py
tests/test_goldbachx/: test_partition_enumerator.py  test_sieve_engine.py
tests/test_riemannx/: test_keiper_li.py  test_zero_properties.py
