[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "proofx"
version = "0.1.0"
description = "ProofX conjecture falsification & analysis toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "joblib==1.5.3",
    "matplotlib==3.11.0",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numba==0.66.0",
    "numpy==2.4.6",
    "pandas==3.0.3",
    "plotly==6.9.0",
    "psutil==7.2.2",
    "PyYAML==6.0.3",
    "rich==15.0.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "shap==0.52.0",
    "statsmodels==0.14.6",
    "sympy==1.14.0",
    "torch==2.13.0",
    "tqdm==4.68.4",
    "zstandard==0.25.0",
]

[project.scripts]
proofx = "codebase.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["packages/python/codebase"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=codebase",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=60",
    "-v",
]

[tool.coverage.run]
source = ["packages/python/codebase"]
omit = [
    "tests/*",
    "*/__init__.py",
    "*/results/*",
    "packages/python/codebase/CollatzX/Bifurcation/*",
    "packages/python/codebase/CollatzX/Boundary/*",
    "packages/python/codebase/CollatzX/Pipeline/*",
    "packages/python/codebase/CollatzX/PrimeGraph/*",
    "packages/python/codebase/CollatzX/Processing/*",
    "packages/python/codebase/CollatzX/RareEvent/*",
    "packages/python/codebase/GoldbachX/GoldbachReasoner/*",
    "packages/python/codebase/GoldbachX/MetaVariant/*",
    "packages/python/codebase/GoldbachX/SequenceGenerator/*",
    "packages/python/codebase/ReimannX/ContourTruth/*",
    "packages/python/codebase/ReimannX/PrimeEchos/*",
    "packages/python/codebase/ReimannX/TuringThreshold/*",
    "packages/python/codebase/ReimannX/ZeroProperties/*",
    "packages/python/codebase/ReimannX/ZetaMirror/*",
    "packages/python/codebase/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "def main\\(",
]

[tool.mypy]
python_version = "3.13"
mypy_path = ["packages/python"]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = [
    "tests/",
    "docs/",
    "packages/germinal/",
    "packages/python/codebase/CollatzX/Bifurcation/",
    "packages/python/codebase/CollatzX/Boundary/",
    "packages/python/codebase/CollatzX/Pipeline/",
    "packages/python/codebase/CollatzX/PrimeGraph/",
    "packages/python/codebase/CollatzX/Processing/",
    "packages/python/codebase/CollatzX/RareEvent/",
    "packages/python/codebase/GoldbachX/GoldbachReasoner/",
    "packages/python/codebase/GoldbachX/MetaVariant/",
    "packages/python/codebase/GoldbachX/SequenceGenerator/",
    "packages/python/codebase/ReimannX/ContourTruth/",
    "packages/python/codebase/ReimannX/PrimeEchos/",
    "packages/python/codebase/ReimannX/TuringThreshold/",
    "packages/python/codebase/ReimannX/ZeroProperties/",
    "packages/python/codebase/ReimannX/ZetaMirror/",
    "packages/python/codebase/cli.py",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [
    "packages/germinal",
    "packages/python/codebase/CollatzX/Bifurcation",
    "packages/python/codebase/CollatzX/Boundary",
    "packages/python/codebase/CollatzX/Pipeline",
    "packages/python/codebase/CollatzX/PrimeGraph",
    "packages/python/codebase/CollatzX/Processing",
    "packages/python/codebase/CollatzX/RareEvent",
    "packages/python/codebase/GoldbachX/GoldbachReasoner",
    "packages/python/codebase/GoldbachX/MetaVariant",
    "packages/python/codebase/GoldbachX/SequenceGenerator",
    "packages/python/codebase/ReimannX/ContourTruth",
    "packages/python/codebase/ReimannX/PrimeEchos",
    "packages/python/codebase/ReimannX/TuringThreshold",
    "packages/python/codebase/ReimannX/ZeroProperties",
    "packages/python/codebase/ReimannX/ZetaMirror",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-length — handled by formatter
    "N802",   # function name should be lowercase (math code uses uppercase)
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
    "N999",   # invalid module name — engine modules intentionally mirror their package name
    "B007",   # loop variable not used
    "SIM108", # ternary operator suggestion
]

[tool.ruff.lint.per-file-ignores]
"packages/python/codebase/FalsificationEngine/FalsificationEngine.py" = ["E402"]
"packages/python/codebase/FalsificationEngine/RiemannFalsifier.py" = ["E402"]
"tests/*" = ["S101", "E402"]  # assert and import-after-skip are fine in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
